--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,14 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  users:
+    fields:
+      login: Username
+      time_zone: Time Zone
+      language: Language
+      email: Email
+      password: Password
+      password_confirmation: Confirm Password
+    new:
+      title: Create a New Account
+      save: Create account
