--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,8 @@ en:
       save: Create account
       
   projects:
+    show:
+      new_task_list_link: New Task List
     fields:
       name: Name
       permalink: URL
@@ -25,6 +27,13 @@ en:
     edit:
       title: Edit
       submit: Save
+  
+  task_lists:
+    fields:
+      name: Name
+    new:
+      title: New Task List
+      submit: Create
       
   sessions:
     fields:
