Fixing sprockets, comments partially implemented

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,6 +51,10 @@ en:
       title: New Task List
       submit: Create
 
+  comments:
+    form:
+      submit: Comment
+
   sessions:
     fields:
       login: Login
