--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,8 +51,12 @@ en:
       submit: Create
 
   comments:
+    comment:
+      confirm_delete: Are you sure you want to delete this comment?
     form:
       submit: Comment
+    edit:
+      submit: Save
 
   sessions:
     fields:
