--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,6 +41,14 @@ en:
       title: New Task
       submit: Create
   
+  pages:
+    new:
+      name: Name
+    edit:
+      submit: Update
+    fields:
+      body: Content
+      name: Name  
   task_lists:
     fields:
       name: Name
