--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,6 +85,7 @@ en:
         task_lists: Task Lists
         all_task_lists: All Task Lists
         project_settings: Project Settings
+        pages: Pages
       global_navigation:
         logout: Logout
         login: Login
