--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,7 +13,8 @@ en:
     new:
       title: Create an Account
       submit: Create account
-      
+    edit:
+      submit: Update account
   projects:
     show:
       new_task_list_link: New Task List
@@ -90,3 +91,4 @@ en:
         logout: Logout
         login: Login
         signup: Signup
+        settings: Settings
