Adding Emailer class to deliver emails.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,6 +77,11 @@ en:
     new:
       title: Login
       submit: Login
+
+  email:
+    user:
+      welcome: Welcome to Teambox!
+
   shared:
       navigation:
         all_projects: 'All Projects'
