Adding feed link to overview

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,7 @@ en:
   projects:
     index:
       projects: My Projects
+      subscribe: Subscribe to the news feed
     show:
       new_task_list_link: New Task List
       people_in_project: People in this project
