Adding people tab
Conflicts:

	config/routes.rb

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -107,6 +107,7 @@ en:
         task_lists: Task Lists
         all_task_lists: All Task Lists
         project_settings: Project Settings
+        people: People
         pages: Pages
       global_navigation:
         logout: Logout
