Working on conversation show view
Conflicts:

	app/helpers/conversations_helper.rb
	config/locales/en.yml
	public/stylesheets/sass/conversations.sass

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,12 @@ en:
     new:
       title: New Conversation
       submit: Create
+    column:
+      conversations: Conversations
+    conversation_with_extract:
+      posted_by: Posted by
+    show:
+      posted_by: Posted by
   
   tasks:
     fields:
