User show view with recent activity on all projects, profile and links to his projects.
Conflicts:

	app/controllers/users_controller.rb
	public/stylesheets/sass/projects.sass

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,9 @@ en:
       submit: Create account
     edit:
       submit: Update account
+    show:
+      profile: Profile
+      projects: Projects
   projects:
     index:
       projects: My Projects
