very early beginings of time tracking

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -126,6 +126,7 @@ en:
         project_settings: Project Settings
         people: People
         pages: Pages
+        time_tracking: Time Tracking
       global_navigation:
         logout: Logout
         login: Login
