Styles for project navigation. Mobing Login and Signup from global nav to project nav bar. Adding links for blog and product site from the login screen.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,8 +127,12 @@ en:
         project_settings: Project Settings
         people: People
         pages: Pages
+        login: Login
+        signup: Signup
       global_navigation:
         logout: Logout
         login: Login
         signup: Signup
         settings: Settings
+        product_site: Product site
+        blog: Blog
