--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -91,9 +91,9 @@ en:
   people:
     index:
       enter_username_or_email: "Enter your teammate's username or email:"
-    person_block:
+  users:
+    user_card:
       formatted_address: "{{street}}, {{city}} ({{country}})"
-
   comments:
     comment:
       confirm_delete: Are you sure you want to delete this comment?
