Conversation index, partials and styles. Using a Lucida Grande now, should update other parts of the app.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,7 +61,10 @@ en:
       edit: Edit
       comment: Comment
       comments: Comments
-      
+    index:
+      message: message
+      messages: messages
+    
   
   tasks:
     fields:
