--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -141,6 +141,7 @@ en:
       time_tracking: Time Tracking
       login: Login
       signup: Signup
+      files: Files
     global_navigation:
       logout: Logout
       login: Login
