posted_date will only display the time if the activity happened later than last midnight

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -154,7 +154,4 @@ en:
       blog: Blog
 
   date:
-    formats:
-      default: "%Y-%m-%d"
-      short: "%b %d"
-      long: "%B %d, %Y"
+    yesterday: Yesterday
