styled the toggle in column settings to have hover, code for comments acsending/descending toggle

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,9 +61,9 @@ en:
       edit: Edit title
       message: message
       messages: messages
-    index:
-      message: message
-      messages: messages
+    short_conversation:
+      comment: comment
+      comments: comments
     
   
   tasks:
