--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -108,6 +108,8 @@ en:
       enter_username_or_email: "Enter your teammate's username or email:"
   comments:
     comment:
+      commented_on: commented on
+      commented_on_a_task_list: commented on a task list
       confirm_delete: Are you sure you want to delete this comment?
     new:
       submit: Comment
