--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -118,6 +118,8 @@ en:
   people:
     index:
       enter_username_or_email: "Enter your teammate's username or email:"
+    person:
+      confirm_delete: Are you sure you want to remove this person from the project?
   comments:
     comment:
       commented_on: "-"
