hide password fields when updating user account

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,7 @@ en:
       sunday: Sunday
       monday: Monday
       first_day_of_week: Week starts on
+      change_password: Change password
     new:
       title: Create an Account
       submit: Create account
