New Project link in the .project_list Aligning projects and distinguishing between read comments and unread comments.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,7 @@ en:
     new:
       title: Create a Project
       submit: Create
+      new_project: New Project...
     edit:
       submit: Save Changes
   invitations:
