--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,7 +46,7 @@ en:
       permalink_prefix: http://teambox.com/
     new:
       title: Create a Project
-      submit: Create
+      submit: Create project and start inviting people
       new_project: New Project...
     edit:
       submit: Save Changes
