--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -174,6 +174,7 @@ en:
       signup: Signup
       files: Files
     global_navigation:
+      project_invitations: Project Invitations
       logout: Logout
       login: Login
       signup: Signup
