Better New Page button

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -109,6 +109,8 @@ en:
     fields:
       body: Content
       name: Name  
+    column:
+      new_page: New Page
   task_lists:
     fields:
       name: Name
