--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,6 +50,8 @@ en:
       new_project: New Project...
     edit:
       submit: Save Changes
+    pending:
+      invited_to_join: "{{by}} has invited you to join the project {{project}}."
   invitations:
     fields:
       email: Email to send invitation to
@@ -173,6 +175,7 @@ en:
       settings: Settings
       product_site: Product site
       blog: Blog
+      project_invitations: "Invitations ({{count}})"
 
   date:
     yesterday: Yesterday
