--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,6 +66,18 @@ en:
       title: New Conversation
       submit: Create
       subscribe_note: This people will be notified of this message and any following comments. As soon as we code that in, of course
+    index:
+      primer:
+        empty: This project doesn't have any conversations yet.
+        create_first: Create the first conversation in this project!
+        define: Use conversations to <b>discuss decisions</b> and <b>update your team</b> about a subject.
+        item1: Each conversation is a thread of comments, which are similar to emails.
+        item2: Comments can have attached files, too.
+        item3: You can subscribe to a conversation to be notified about future replies by email or RSS.
+        item4: Any comment can be formatted with text styles.
+        item5: You can answer to a conversation from your email to post a reply.
+        footer1: Conversations are great to share a new design, decide a date for meeting or report some news.
+        footer2: Since they're threaded, it's easy to go back in time and see which files were sent and what did each teammate said.
     column:
       new_conversation: New Conversation
     conversation_with_extract:
