added my custom plugins, tabnav, weakling, fyi

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -188,3 +188,11 @@ en:
 
   date:
     yesterday: Yesterday
+
+
+  weakling:
+    default: Must be at least 5 characters
+    error: too short
+    weak: weak
+    average: average
+    strong: strong
