Moving the close the welcome tab link to a more visible place

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,8 @@ en:
       recent_activity_for: Recent activity for {{user_name}}
     user_card:
       formatted_address: "{{street}}, {{city}} ({{country}})"
+    welcome:
+      stop_welcome: Stop showing this Welcome tab
   projects:
     index:
       title: News feed for all your projects
@@ -250,7 +252,6 @@ en:
       all_projects: 'All Projects'
       new_project: +
     project_navigation:
-      stop_welcome: Stop showing this Welcome tab
       overview: Overview
       all_conversations: All Conversations
       conversations: Conversations
