Adding all task lists/conversations/pages tabs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -258,6 +258,7 @@ en:
       task_lists: Task Lists
       all_task_lists: All Task Lists
       project_settings: Project Settings
+      all_pages: All Pages
       people: People
       pages: Pages
       time_tracking: Time Tracking
