--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,8 +5,13 @@ en:
   common:
     or: or
     cancel: Cancel
-    people_watching: "People watching this item:"
+    delete: Delete
+    edit: Edit
+    people_watching: "People watching this item: "
     nobody_watching: "Nobody is watching this."
+  confirm:
+    delete_task_list: Are you sure you want to delete this task list?
+    delete_task: Are you sure you want to delete this task?
   activities:
     activity_line:
       create_conversation: created the conversation
@@ -148,7 +153,7 @@ en:
       submit: Add Task
       cancel: Cancel
     show:
-      task_title: "Task: {{name}}"
+      title: "Task: {{name}}"
   
   notes:
     actions:
@@ -214,6 +219,8 @@ en:
       submit: Create
     column:
       new_task_list: New Task List
+    show:
+      title: "Task List: {{name}}"
   people:
     index:
       enter_username_or_email: "Enter your teammate's username or email:"
